# music-pipeline

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  justfile  prompt.md  pyproject.toml  tag_and_move.py
.claude/: settings.json
music_pipeline/: audio.py  config.py  main.py  models.py
music_pipeline/pipeline/: brave_search.py  fingerprint.py  identifier.py  llm.py  musicbrainz.py  scanner.py  spotify.py
music_pipeline/state/: db.py
music_pipeline/tags/: reader.py  writer.py
music_pipeline/ui/: terminal.py
music_pipeline/utils/: paths.py
